# vpn_server

./: .dockerignore  .env.example  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.bridge.yml  docker-compose.yml
.github/workflows/: ci.yml
deploy/: DOCKER_DEPLOYMENT.md  docker-entrypoint.sh  sample-beacon.conf  sample-client.conf  sample-mesh.conf  sample-server.conf  setup-digitalocean.sh  wireguard-vpn.service
deploy/mesh-example/: docker-compose.yml  generate-configs.sh
docs/: ARCHITECTURE.md
include/vpn/core/: config.hpp  server.hpp  thread_pool.hpp
include/vpn/crypto/: blake2s.hpp  chacha20poly1305.hpp  curve25519.hpp  noise.hpp  types.hpp
include/vpn/mesh/: beacon.hpp  kademlia.hpp  mesh_config.hpp  mesh_message.hpp  mesh_node.hpp  nat_traversal.hpp
include/vpn/net/: address.hpp  tun_device.hpp  udp_socket.hpp
include/vpn/protocol/: message.hpp  peer.hpp  session.hpp  timer.hpp
include/vpn/util/: base64.hpp  logger.hpp
src/: beacon_main.cpp  main.cpp
src/core/: config.cpp  server.cpp  thread_pool.cpp
src/crypto/: blake2s.cpp  chacha20poly1305.cpp  curve25519.cpp  noise.cpp
src/mesh/: beacon.cpp  kademlia.cpp  mesh_config.cpp  mesh_message.cpp  mesh_node.cpp  nat_traversal.cpp
src/net/: address.cpp  tun_device.cpp  udp_socket.cpp
src/protocol/: message.cpp  peer.cpp  session.cpp  timer.cpp
src/util/: base64.cpp  logger.cpp
tests/: test_main.cpp
tests/crypto/: test_blake2s.cpp  test_chacha20poly1305.cpp  test_curve25519.cpp  test_noise.cpp
tests/mesh/: test_kademlia.cpp  test_mesh_config.cpp  test_mesh_message.cpp  test_nat_traversal.cpp
tests/net/: test_udp_socket.cpp
tests/protocol/: test_handshake.cpp  test_message.cpp
tools/: wg-keygen.cpp
